examples/misc/error/compilation/syntax_letrec_top.bfr
let rec r = let f () = r in f ()

let main = []